Closed Bug 679454 Opened 13 years ago Closed 13 years ago

Assertion triggered in MIPS backend

Categories

(Tamarin Graveyard :: Baseline JIT (CodegenLIR), defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: chris, Assigned: wmaddox)

Details

(Whiteboard: fixed-in-tamarin-redux,fixed-in-nanojit,[inbound])

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 6.0; WOW64; rv:5.0) Gecko/20100101 Firefox/5.0
Build ID: 20110615151330

Steps to reproduce:

Stress testing revealed an assertion failure in asm_j triggered by underrunProtect()
Need to use a register jump when jumping to different segment. The assumption was that code pages would always be in the same segment.

This patch uses $ra as the temporary register. It ensures that the function prologue and epilogue will not span codepages and also modifies other jump handling to use $ra for consistency
Attachment #553544 - Flags: review?(wmaddox)
Apparently the review and landing of this patch is blocking this weeks integration.
Comment on attachment 553544 [details] [diff] [review]
Handle jumps to different segments

R+

I'll go ahead and commit this.
Attachment #553544 - Flags: review?(wmaddox) → review+
changeset: 6524:3fd02dc07a27
user:      William Maddox <wmaddox@adobe.com>
summary:   Bug 679454 - Correctly handle cross-segment jumps on MIPS [chris@mips.com] (r=wmaddox)

http://hg.mozilla.org/tamarin-redux/rev/3fd02dc07a27
Assignee: nobody → wmaddox
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Whiteboard: fixed-in-tamarin-redux,fixed-in-nanojit
http://hg.mozilla.org/mozilla-central/rev/3c8c7eb5e4ff
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
http://hg.mozilla.org/integration/mozilla-inbound/rev/3c8c7eb5e4ff
Whiteboard: fixed-in-tamarin-redux,fixed-in-nanojit → fixed-in-tamarin-redux,fixed-in-nanojit,[inbound]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: