Bug 679454 - Correctly handle cross-segment jumps on MIPS [chris@mips.com] (r=wmaddox)